--- a/style.css
+++ b/style.css
@@ -67,10 +67,6 @@ table th.sort-up:after {
   content: '\f104';
 }
 
-table.attributes {
-  width: auto !important;
-}
-
 table.attributes th {
   text-align: left;
   font-weight: bold;
@@ -81,6 +77,7 @@ table.attributes th {
 
 table.attributes td {
   text-align: left !important;
+  width: 100%;
 }
 
 .infobox .clients {
