forcegraph: change background

--- a/scss/_forcegraph.scss
+++ b/scss/_forcegraph.scss
@@ -1,6 +1,6 @@
 .graph {
   height: 100vh;
-  background: url(img/geometry2.png);
+  background: url(img/gplaypattern.png);
 
   svg {
     display: block;
