enhance sidebar and content styling
- 3 sidebar variations (margin, no margin, below content)
  depending on screen size
- scrolling sidebar will scroll document (more space on mobile devices)
- wrap map/graph on div.content

--- a/scss/_forcegraph.scss
+++ b/scss/_forcegraph.scss
@@ -1,5 +1,6 @@
 .graph {
-  height: 100vh;
+  height: 100%;
+  width: 100%;
   background: url(img/gplaypattern.png);
 
   svg {
@@ -54,9 +55,3 @@
     }
   }
 }  
-
-@media screen and (max-width: $minscreenwidth) {
-  .graph {
-    height: 60vh;
-  }
-}
