--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,11 +6,8 @@ $sidebarwidth: 420pt;
 $sidebarwidthsmall: 360pt;
 $buttondistance: 12pt;
 
+@import '_map';
 @import '_forcegraph';
-
-.stroke-first {
-  paint-order: stroke;
-}
 
 .contenttoggle {
   z-index: 100;
@@ -257,18 +254,6 @@ button.close:after {
   right: 0.5em;
 }
 
-.map {
-  width: 100%;
-  height: 100%;
-
- .node-alert {
-    -webkit-animation: blink 2s linear;
-    -webkit-animation-iteration-count: infinite;
-    animation: blink 2s linear;
-    animation-iteration-count: infinite;
-  }
-}
-
 .proportion th {
   font-weight: normal;
   text-align: right !important;
@@ -292,18 +277,6 @@ button.close:after {
   font-weight: bold;
   min-width: 1.5em;
   box-sizing: border-box;
-}
-
-@-webkit-keyframes blink {
-  0%   { opacity: 1.0; }
-  80%  { opacity: 1.0; }
-  90%  { opacity: 0.0; }
-}
-
-@keyframes blink {
-  0%   { opacity: 1.0; }
-  80%  { opacity: 1.0; }
-  90%  { opacity: 0.0; }
 }
 
 @media screen and (max-width: 80em) {
