--- a/scss/_map.scss
+++ b/scss/_map.scss
@@ -6,6 +6,10 @@
   width: 100%;
   height: 100%;
 
+  button.locate-user:after {
+    content: '\f2a7';
+  }
+
  .node-alert {
     -webkit-animation: blink 2s linear;
     -webkit-animation-iteration-count: infinite;
