add border-radius to infobox + container

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -123,6 +123,7 @@ table.attributes td {
   .infobox, .container {
     box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.19), 0px 3px 6px rgba(0, 0, 0, 0.23);
     background: rgba(255, 255, 255, 0.9);
+    border-radius: 2px;
   }
 }
 
@@ -344,6 +345,7 @@ table {
     .container, .infobox {
       margin: 0;
       box-shadow: none;
+      border-radius: 0;
     }
 
     .infobox {
