--- a/scss/main.scss
+++ b/scss/main.scss
@@ -125,6 +125,10 @@ table.attributes td {
     background: rgba(255, 255, 255, 0.9);
     border-radius: 2px;
   }
+
+  p {
+    line-height: 1.67em;
+  }
 }
 
 .infobox .clients {
