--- a/scss/_map.scss
+++ b/scss/_map.scss
@@ -10,6 +10,10 @@
     content: '\f2a7';
   }
 
+  button.add-layer:after {
+    content: '\f217';
+  }
+
  .node-alert {
     -webkit-animation: blink 2s linear;
     -webkit-animation-iteration-count: infinite;
