sidebar: reduce breakpoint to 630pt, reduce width to 320pt

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,9 +3,9 @@
 @import '_leaflet';
 @import '_leaflet.label';
 
-$minscreenwidth: 60em;
+$minscreenwidth: 630pt;
 $sidebarwidth: 420pt;
-$sidebarwidthsmall: 360pt;
+$sidebarwidthsmall: 320pt;
 $buttondistance: 12pt;
 
 @import '_sidebar';
