remove contact info from simplenodelist

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -282,6 +282,7 @@ table {
 
 .sidebar td:not(:first-child), .sidebar th:not(:first-child) {
   text-align: right;
+  white-space: nowrap;
 }
 
 .sidebar a {
