infobox hides sidebar

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -126,6 +126,10 @@ table.attributes td {
     border-radius: 2px;
   }
 
+  .container.hidden {
+    display: none;
+  }
+
   p {
     line-height: 1.67em;
   }
