--- a/scss/_forcegraph.scss
+++ b/scss/_forcegraph.scss
@@ -1,7 +1,7 @@
 .graph {
   height: 100%;
   width: 100%;
-  background: url(img/gplaypattern.png);
+  background: #2E2633;
 
   canvas {
     display: block;
