added simple node status legend

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,6 +12,7 @@ $buttondistance: 12pt;
 @import '_sidebar';
 @import '_map';
 @import '_forcegraph';
+@import '_legend';
 
 .content {
   position: fixed;
