Abbreviate first column of sidebar table
This implements part of #6 with CSS to shorten extremely long node names
with ellipsis.

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -245,6 +245,14 @@ table {
   width: 60%;
 }
 
+.sidebar table th:first-child,
+.sidebar table td:first-child {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 60%;
+}
+
 .sidebarhandle {
   position: fixed;
   left: $sidebarwidth + 2 * $buttondistance;
