infobox/node: unseen status orange

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -284,6 +284,10 @@ table {
   color: #D43E2A !important;
 }
 
+.unseen {
+  color: #D89100 !important;
+}
+
 .sidebar {
   z-index: 5;
   width: $sidebarwidth;
