proportions: allow hiding of statistics and add gateway client statistics
Update proportions.js: enable onclick hiding of Statistics <H2> and add clients per GW <H2>
hiding works by clicking on H2 element, so you can have the overview you like
[need to add some hidden line in scss/main.scss also]
clients per GW is based on nodes.json and the offered clientcount by the nodes directly (so this is only rough idea of reality, for alfred this means extra timedifferences upto 30 minutes)

update main.scss: to allow hiding of statistics element
add this to allow statistics element hiding

use consistent var table and dict Names
change gwTable and gwDict (and gw2 ...) to
gwNodes and gwClients

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -127,6 +127,10 @@ table.attributes td {
     display: none;
   }
 
+  .container table.hidden {
+    display: none;
+  }
+
   p {
     line-height: 1.67em;
   }
