[TASK] Style layer selector

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,6 +3,7 @@
 @import '_base';
 @import '_leaflet';
 @import '_leaflet.label';
+@import '_leaflet-layer';
 @import '_filters';
 
 $minscreenwidth: 630pt;
