--- a/scss/modules/_variables.scss
+++ b/scss/modules/_variables.scss
@@ -20,3 +20,6 @@ $minscreenwidth: 630pt !default;
 $sidebarwidth: 420pt !default;
 $sidebarwidthsmall: 320pt !default;
 $buttondistance: 12pt !default;
+
+// En/disable box-shadows
+$shadows: 1 !default;
