--- a/scss/modules/_button.scss
+++ b/scss/modules/_button.scss
@@ -21,22 +21,26 @@ button {
     color: $color-primary;
   }
 
-  &.shadow {
-    @include shadow(1);
+  @if $shadows == 1 {
+    &.shadow {
+      @include shadow(1);
 
-    &:hover {
-      @include shadow(2);
-    }
+      &:hover {
+        @include shadow(2);
+      }
 
-    &:active {
-      box-shadow: inset 0 5px 20px rgba($color-black, .19), inset 0 3px 6px rgba($color-black, .23);
+      &:active {
+        box-shadow: inset 0 5px 20px rgba($color-black, .19), inset 0 3px 6px rgba($color-black, .23);
+      }
     }
   }
 
   &.close {
     background: none;
     border-radius: 0;
-    box-shadow: none;
+    @if $shadows == 1 {
+      box-shadow: none;
+    }
     color: rgba($color-black, .5);
     float: right;
     font-size: 20pt;
