--- a/scss/modules/_sidebar.scss
+++ b/scss/modules/_sidebar.scss
@@ -53,7 +53,11 @@
   }
 
   .infobox, .container {
-    @include shadow(2);
+    @if $shadows == 1 {
+      @include shadow(2);
+    } @else {
+      border-right: 1px solid darken($color-white, 10%);
+    }
     background: rgba($color-white, .97);
     min-height: 100vh;
     overflow-y: visible;
@@ -66,7 +70,6 @@
   }
 
   @media screen and (max-width: 80em) {
-    @include shadow(2);
     background: $color-white;
     font-size: .8em;
     margin: 0;
@@ -78,7 +81,9 @@
 
     .container, .infobox {
       border-radius: 0;
-      box-shadow: none;
+      @if $shadows == 1 {
+        box-shadow: none;
+      }
       margin: 0;
     }
   }
