--- a/scss/modules/_tabs.scss
+++ b/scss/modules/_tabs.scss
@@ -7,7 +7,7 @@
   }
   background: rgba($color-black, .02);
   display: flex;
-  font-family: $font-family;
+  font-family: $font-family-secondary;
   list-style: none;
   margin: 0;
   padding: 1em 0 0;
