--- a/scss/modules/_base.scss
+++ b/scss/modules/_base.scss
@@ -1,4 +1,5 @@
 body {
+  -webkit-tap-highlight-color: transparent;
   background: $color-white;
   color: $color-black;
   font-family: $font-family;
