--- a/scss/modules/_tabs.scss
+++ b/scss/modules/_tabs.scss
@@ -10,13 +10,13 @@
   font-family: $font-family-secondary;
   list-style: none;
   margin: 0;
-  padding: 1em 0 0;
+  padding: 0;
 
   li {
     color: rgba($color-black, .5);
     cursor: pointer;
     flex: 1 1 auto;
-    padding: .5em .5em 1em;
+    padding: 1.3em .5em 1em;
     text-align: center;
     text-transform: uppercase;
 
