--- a/scss/modules/_variables.scss
+++ b/scss/modules/_variables.scss
@@ -9,6 +9,7 @@ $color-primary: #dc0067 !default;
 $color-new: #459c18 !default;
 $color-online: #1566a9 !default;
 $color-offline: #cf3e2a !default;
+$color-unseen: #d89100 !default;
 
 $font-family: 'Roboto Slab', serif !default;
 $font-family-secondary: Roboto, sans-serif !default;
