--- a/scss/modules/_button.scss
+++ b/scss/modules/_button.scss
@@ -30,7 +30,7 @@ button {
       }
 
       &:active {
-        box-shadow: inset 0 5px 20px rgba($color-black, .19), inset 0 3px 6px rgba($color-black, .23);
+        box-shadow: inset 0 5px 20px transparentize($color-black, .81), inset 0 3px 6px transparentize($color-black, .77);
       }
     }
   }
@@ -41,7 +41,7 @@ button {
     @if $shadows == 1 {
       box-shadow: none;
     }
-    color: rgba($color-black, .5);
+    color: transparentize($color-black, .5);
     float: right;
     font-size: 20pt;
     height: auto;
