--- a/scss/modules/_node.scss
+++ b/scss/modules/_node.scss
@@ -1,11 +1,11 @@
 .bar {
-  background: rgba($color-new, .5);
+  background: transparentize($color-new, .5);
   display: block;
   height: 1.4em;
   position: relative;
 
   span {
-    background: rgba($color-new, .8);
+    background: transparentize($color-new, .92);
     display: inline-block;
     height: 1.4em;
   }
