--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,7 +8,7 @@
 @import 'modules/base';
 @import 'modules/icon';
 @import 'leaflet';
-@import 'leaflet.label';
+@import 'modules/leaflet';
 @import 'modules/leaflet-layer';
 @import 'modules/table';
 @import 'modules/filter';
