[TASK] Basic loader with info

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,6 +2,7 @@
 @import 'modules/variables';
 @import 'custom/variables';
 // Add modules
+@import 'modules/loader';
 @import 'mixins/shadow';
 @import 'mixins/icon-mixin';
 @import 'modules/reset';
